--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <form action="">
                 <input type="text" name="" id="" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
-                <input type="date" name="" id="" placeholder="Reservation Time">
-                <input type="time" name="" id="">
+                <input type="text" name="date" id="" onfocus="(this.type='date')" placeholder="Reservation Date">
+                <input type="text" name="time" id="" onfocus="(this.type='time')" placeholder="Reservation Time">
                 <select name="Select A Service" id="">
                     <option value="Select A Service">Select A Service</option>
                     <option value="">Service 1</option>
@@ -150,7 +150,64 @@
             </div>
         </div>
     </div>
-    
     <!-- end about -->
+    <!-- start Services -->
+    <div class="Services">
+        <div class="container">
+            <h6>Our Services</h6>
+            <h1><span>Premium</span> Pet Services</h1>
+            <div class="Premium-Pet-Services">
+                <div class="pet">
+                    <i class="fa-solid fa-house-chimney-user"></i>
+                    <h1>Pet Boarding</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+                <div class="pet">
+                    <i class="fa-solid fa-house-chimney-user"></i>
+                    <h1>Pet Boarding</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+                <div class="pet">
+                    <i class="fa-solid fa-house-chimney-user"></i>
+                    <h1>Pet Boarding</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+                <div class="pet">
+                    <i class="fa-solid fa-house-chimney-user"></i>
+                    <h1>Pet Boarding</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+                <div class="pet">
+                    <i class="fa-solid fa-house-chimney-user"></i>
+                    <h1>Pet Boarding</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+                <div class="pet">
+                    <i class="fa-solid fa-house-chimney-user"></i>
+                    <h1>Pet Boarding</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end Services -->
 </body>
 </html>
