--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,7 +33,7 @@
                 </div>
             </div>
     </div>
-    <!-- start-nav-bar-->
+    <!--nav-bar-->
     <div class="nav"> 
         <i class="fa-solid fa-bars"></i>
         <ul>
@@ -54,8 +54,7 @@
         <input type="button" value="Get Quote">
         
     </div>
-    <!--end-nav-bar -->
-    <!-- start landing -->
+    <!--landing -->
     <div class="landing">
         <i class="fa-solid fa-angle-left"></i>
         <i class="fa-solid fa-angle-right"></i>
@@ -69,8 +68,7 @@
             </div>
         </div>
     </div>  
-    <!-- end landing-->
-    <!--start vacation-->
+    <!--vacation-->
     <div class="vacation">
         <div class="container">
             <form action="">
@@ -124,9 +122,7 @@
             </div>
         </div>
     </div>
-    <!--end vacation-->
-    <!-- start landing -->
-    <!-- start about -->
+    <!--about -->
     <div class="about">
         <div class="container">
             <div class="text">
@@ -145,13 +141,14 @@
             </div>
             <div class="photos">
                 <img src="./img/about-1.jpg" alt="about-1">
-                <img src="./img/about-2.jpg" alt="about-2">
-                <img src="./img/about-3.jpg" alt="about-3">
+                <div>
+                    <img src="./img/about-2.jpg" alt="about-2">
+                    <img src="./img/about-3.jpg" alt="about-3">
+                </div>
             </div>
         </div>
     </div>
-    <!-- end about -->
-    <!-- start Services -->
+    <!--Services -->
     <div class="Services">
         <div class="container">
             <h6>Our Services</h6>
@@ -166,8 +163,24 @@
                     <a href="#">READ MORE</a>
                 </div>
                 <div class="pet">
-                    <i class="fa-solid fa-house-chimney-user"></i>
-                    <h1>Pet Boarding</h1>
+                    <i class="fa-solid fa-fish"></i>
+                    <h1>Pet Feeding</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+                <div class="pet">
+                    <i class="fa-solid fa-scissors"></i>
+                    <h1>Pet Grooming</h1>
+                    <p>
+                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
+                    </p>
+                    <a href="#">READ MORE</a>
+                </div>
+                <div class="pet">
+                    <i class="fa-solid fa-dog"></i>
+                    <h1>Pet Training</h1>
                     <p>
                         Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
                     </p>
@@ -175,7 +188,7 @@
                 </div>
                 <div class="pet">
                     <i class="fa-solid fa-house-chimney-user"></i>
-                    <h1>Pet Boarding</h1>
+                    <h1>Pet Exercise</h1>
                     <p>
                         Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
                     </p>
@@ -183,23 +196,7 @@
                 </div>
                 <div class="pet">
                     <i class="fa-solid fa-house-chimney-user"></i>
-                    <h1>Pet Boarding</h1>
-                    <p>
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
-                    </p>
-                    <a href="#">READ MORE</a>
-                </div>
-                <div class="pet">
-                    <i class="fa-solid fa-house-chimney-user"></i>
-                    <h1>Pet Boarding</h1>
-                    <p>
-                        Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
-                    </p>
-                    <a href="#">READ MORE</a>
-                </div>
-                <div class="pet">
-                    <i class="fa-solid fa-house-chimney-user"></i>
-                    <h1>Pet Boarding</h1>
+                    <h1>Pet Treatment</h1>
                     <p>
                         Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo
                     </p>
@@ -208,6 +205,135 @@
             </div>
         </div>
     </div>
-    <!-- end Services -->
+    <!-- features -->
+    <div class="Features">
+        <div class="container">
+            <img src="./img/feature.jpg" alt="feature">
+            <div class="special-care ">
+                <h6>Why Choose Us?</h6>
+                <h1><span>Special Care</span> On Pets</h1>
+                <p>
+                    Dolor lorem lorem ipsum sit et ipsum. Sadip sea amet diam sed ut vero no sit. Et elitr stet sed sit sed kasd. Erat duo eos et erat sed diam duo
+                </p>
+                <div class="features">
+                    <div class="feat">
+                        <i class="fa-solid fa-cat"></i>
+                        <h1>Best In Industry</h1>
+                    </div>
+                    <div class="feat">
+                        <i class="fa-solid fa-feather"></i>
+                        <h1>Emergency Services</h1>
+                    </div>
+                    <div class="feat">
+                        <i class="fa-solid fa-hand-holding-heart"></i>
+                        <h1>Special Care</h1>
+                    </div>
+                    <div class="feat">
+                        <i class="fa-solid fa-paw"></i>
+                        <h1>Customer Support</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Pricing -->
+    <div class="pricing">
+        <div class="container">
+            <h6>Pricing Plan</h6>
+            <h1>Choose the <span>Best Price</span></h1>
+            <div class="best-price">
+                <div class="price">
+                    <div class="Img">
+                        <div class="img">
+                            <img src="./img/price-1.jpg" alt="price-1">
+                        </div>
+                        <div class="text">
+                            <h2>Basic</h2>
+                            <div>49</div>
+                        </div>
+                    </div>
+                    <ul>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Feeding</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Boarding</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-xmark"></i>
+                            <li>Spa & Grooming</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-xmark"></i>
+                            <li>Veterinary Medicine</li>
+                        </div>
+                    </ul>
+                    <input type="button" value="Signup Now">
+                </div>
+                <div class="price">
+                    <div class="Img">
+                        <div class="img">
+                            <img src="./img/price-2.jpg" alt="price-3">
+                        </div>
+                        <div class="text">
+                            <h2 id="standard">Standard</h2>
+                            <div>99</div>
+                        </div>
+                    </div>
+                    <ul>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Feeding</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Boarding</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Spa & Grooming</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-xmark"></i>
+                            <li>Veterinary Medicine</li>
+                        </div>
+                    </ul>
+                    <input type="button" value="Signup Now">
+                </div>
+                <div class="price">
+                    <div class="Img">
+                        <div class="img">
+                            <img src="./img/price-3.jpg" alt="price-3">
+                        </div>
+                        <div class="text">
+                            <h2>Premium</h2>
+                            <div>149</div>
+                        </div>
+                    </div>
+                    <ul>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Feeding</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Boarding</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Spa & Grooming</li>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-check"></i>
+                            <li>Veterinary Medicine</li>
+                        </div>
+                    </ul>
+                    <input type="button" value="Signup Now">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
