modified(landing & vacation)

--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
                     </div>
                     <div>
                         <div class="head">
-                            <i class="fa-regular fa-bone"></i>
-                            <h1>Pet Boarding</h1>
+                            <i class="fa-solid fa-drumstick-bite"></i>
+                            <h1>Pet Feeding</h1>
                         </div>
                         <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
                     </div>
                     <div>
                         <div class="head">
-                            <i class="fa-solid fa-bone"></i>
-                            <h1>Pet Boarding</h1>
+                            <i class="fa-solid fa-brush"></i>
+                            <h1>Pet Grooming</h1>
                         </div>
                         <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
                     </div>
                     <div>
                         <div class="head">
-                            <i class="fa-solid fa-bone"></i>
-                            <h1>Pet Boarding</h1>
+                            <i class="fa-solid fa-dog"></i>
+                            <h1>Pet Tranning</h1>
                         </div>
                         <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
                     </div>
@@ -270,7 +270,7 @@
                             <li>Veterinary Medicine</li>
                         </div>
                     </ul>
-                    <input type="button" value="Signup Now">
+                    <input type="button" value="Signup">
                 </div>
                 <div class="price">
                     <div class="Img">
@@ -300,7 +300,6 @@
                             <li>Veterinary Medicine</li>
                         </div>
                     </ul>
-                    <input type="button" value="Signup Now">
                 </div>
                 <div class="price">
                     <div class="Img">
@@ -330,7 +329,6 @@
                             <li>Veterinary Medicine</li>
                         </div>
                     </ul>
-                    <input type="button" value="Signup Now">
                 </div>
             </div>
         </div>
