--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
                             <li>Veterinary Medicine</li>
                         </div>
                     </ul>
+                    <input type="button" value="Signup">
                 </div>
                 <div class="price">
                     <div class="Img">
@@ -329,6 +330,68 @@
                             <li>Veterinary Medicine</li>
                         </div>
                     </ul>
+                    <input type="button" value="Signup">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- team -->
+    <div class="team">
+        <div class="container">
+            <h6>Team Member</h6>
+            <h1>Meet Our <span>Team Member</span></h1>
+            <div class="members">
+                <div class="member">
+                    <img src="./img/team-1.jpg" alt="team-1">
+                    <div class="text">
+                        <h3>Mollie Ross</h3>
+                        <p>Founder & CEO</p>
+                        <div class="icons">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-linkedin-in"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="member">
+                    <img src="./img/team-2.jpg" alt="team-2">
+                    <div class="text">
+                        <h3>Jennifer Page</h3>
+                        <p>Chef Executive</p>
+                        <div class="icons">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-linkedin-in"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="member">
+                    <img src="./img/team-3.jpg" alt="team-3">
+                    <div class="text">
+                        <h3>Kate Glover</h3>
+                        <p>Doctor</p>
+                        <div class="icons">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-linkedin-in"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="member">
+                    <img src="./img/team-4.jpg" alt="team-4">
+                    <div class="text">
+                        <h3>Lilly Fry</h3>
+                        <p>Trainer</p>
+                        <div class="icons">
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-linkedin-in"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
