--- a/index.html
+++ b/index.html
@@ -396,5 +396,54 @@
             </div>
         </div>
     </div>
+    <!-- Testimonial -->
+    <div class="testimonial">
+        <div class="container">
+            <h6>Testimonial</h6>
+            <h1>Our Client<span>Says</span></h1>
+            <ul class="clients">
+                <li class="client">
+                    <div class="id">
+                        <img src="./img/testimonial-1.jpg" alt="testimonial-1">
+                        <div class="text">
+                            <h1>Client Name</h1>
+                            <P>Profession</P>
+                        </div>
+                    </div>
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum sanct clita</p>
+                </li>
+                <li class="client">
+                    <div class="id">
+                        <img src="./img/testimonial-2.jpg" alt="testimonial-2">
+                        <div class="text">
+                            <h1>Client Name</h1>
+                            <P>Profession</P>
+                        </div>
+                    </div>
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum sanct clita</p>
+                </li>
+                <li class="client">
+                    <div class="id">
+                        <img src="./img/testimonial-3.jpg" alt="testimonial-3">
+                        <div class="text">
+                            <h1>Client Name</h1>
+                            <P>Profession</P>
+                        </div>
+                    </div>
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum sanct clita</p>
+                </li>
+                <li class="client">
+                    <div class="id">
+                        <img src="./img/testimonial-4.jpg" alt="testimonial-4">
+                        <div class="text">
+                            <h1>Client Name</h1>
+                            <P>Profession</P>
+                        </div>
+                    </div>
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum sanct clita</p>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
