--- a/index.html
+++ b/index.html
@@ -445,6 +445,68 @@
                     </li>
                 </ul>
             </div>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
+    <div class="pet-blog">
+        <div class="container">
+            <h6>Pet Blog</h6>
+            <h1><span>Updates </span>From Blog</h1>
+            <div class="blogs">
+                <div class="blog">
+                    <img src="./img/blog-1.jpg" alt="blog-1">
+                    <div class="text">
+                        <h3>Diam amet eos at no eos</h3>
+                        <div class="icons">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Admin</span>
+                            <i class="fa-solid fa-folder"></i>
+                            <span>Web Design</span>
+                            <i class="fa-solid fa-comments"></i>
+                            <span>15</span>
+                        </div>
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum sit vero stet justo</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./img/blog-2.jpg" alt="blog-2">
+                    <div class="text">
+                        <h3>Diam amet eos at no eos</h3>
+                        <div class="icons">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Admin</span>
+                            <i class="fa-solid fa-folder"></i>
+                            <span>Web Design</span>
+                            <i class="fa-solid fa-comments"></i>
+                            <span>15</span>
+                        </div>
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum sit vero stet justo</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="./img/blog-3.jpg" alt="blog-3">
+                    <div class="text">
+                        <h3>Diam amet eos at no eos</h3>
+                        <div class="icons">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Admin</span>
+                            <i class="fa-solid fa-folder"></i>
+                            <span>Web Design</span>
+                            <i class="fa-solid fa-comments"></i>
+                            <span>15</span>
+                        </div>
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum sit vero stet justo</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
