--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
             </ul>
         </div>
     </div>
+    <!-- pet-blog -->
     <div class="pet-blog">
         <div class="container">
             <h6>Pet Blog</h6>
@@ -507,6 +508,48 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="col-1">
+            <div class="logo">
+                <span>Pet</span>Lover
+            </div>
+            <p>
+                Ipsum amet sed vero et lorem stet eos ut, labore sed sed stet sea est ipsum ut. Volup amet ea sanct ipsum, dolore vero lorem no duo eirmod. Eirmod amet ipsum no ipsum lorem clita ut. Ut sed sit lorem ea lorem sed, amet stet sit sea ea diam tempor kasd kasd. Diam nonumy etsit tempor ut sed diam sed et ea
+            </p>
+        </div>
+        <div class="col-2">
+            <h3>Get In Touch</h3>
+            <div class="contact">
+                <p> <i class="fa-solid fa-location-dot"></i> 123 Street, New York, USA</p>
+                <p><i class="fa-solid fa-phone"></i>+012 345 67890</p>
+                <p><i class="fa-solid fa-envelope"></i>info@example.com</p>
+            </div>
+            <div class="icons">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+        </div>
+        <div class="col-3">
+            <h3>Popular Links</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Our Services</a></li>
+                <li><a href="">Our Team</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="col-4">
+            <h3>Newsletter</h3>
+            <form action="">
+                <input type="text" name="Your Name" id="" placeholder="Your Name">
+                <input type="email" name="Your Email" id="" placeholder="Your Email">
+                <input type="button" value="Submit Now">
+            </form>
         </div>
     </div>
 </body>
